--- a/res/layout/home_tab_activity.xml
+++ b/res/layout/home_tab_activity.xml
@@ -87,18 +87,22 @@
             android:id="@+id/app_loading_tip"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:background="#555555"
             android:gravity="center"
             android:text="@string/app_loading"
             android:textColor="#aaaaaa"
             android:visibility="visible" />
+
         <TextView
             android:id="@+id/app_bottom_loading_tip"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="#88000000"
             android:gravity="center"
             android:text="正在努力为您加载更多"
-            android:textColor="#aaaaaa"
-            android:visibility="visible" />
+            android:textColor="#FFFFFF"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </LinearLayout>
