--- a/res/layout/home_details_activity.xml
+++ b/res/layout/home_details_activity.xml
@@ -98,17 +98,18 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="3dp"
             android:layout_marginTop="6dp"
-            android:background="#88b2b2b2"
+            android:background="#90999999"
             android:orientation="vertical" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="30天销量"
                 android:textColor="#333333"
-                android:textSize="10sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/home_details_goods_sales"
@@ -118,7 +119,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:textColor="#e9235f"
-                android:textSize="12sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -148,7 +150,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toLeftOf="@id/home_details_goods_price"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:marqueeRepeatLimit="1"
