--- a/res/layout/home_tab_activity.xml
+++ b/res/layout/home_tab_activity.xml
@@ -83,26 +83,58 @@
             android:verticalSpacing="4dip" >
         </GridView>
 
-        <TextView
-            android:id="@+id/app_loading_tip"
+        <LinearLayout
+            android:id="@+id/app_loading_layout_tip"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#555555"
+            android:background="#FFFFFF"
             android:gravity="center"
-            android:text="@string/app_loading"
-            android:textColor="#aaaaaa"
-            android:visibility="visible" />
+            android:orientation="horizontal" >
 
-        <TextView
+            <ProgressBar
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp" />
+
+            <TextView
+                android:id="@+id/app_loading_textview_tip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:text="@string/app_loading"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#aaaaaa" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/app_bottom_loading_tip"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
             android:background="#88000000"
-            android:gravity="center"
-            android:text="正在努力为您加载更多"
-            android:textColor="#FFFFFF"
-            android:visibility="gone" />
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:visibility="gone" >
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="亲,正在加载中..."
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
