--- a/res/layout/home_tab_list_item.xml
+++ b/res/layout/home_tab_list_item.xml
@@ -21,7 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#90989892"
+        android:background="#90999999"
         android:orientation="horizontal" >
 
         <TextView
@@ -31,9 +31,10 @@
             android:layout_marginLeft="10dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="￥25"
+            android:text="未知"
             android:textColor="#ffffff"
-            android:textSize="10sp" />
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="0dp"
@@ -47,9 +48,10 @@
             android:layout_marginRight="10dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="销量：321"
+            android:text="销量:未知"
             android:textColor="#ffffff"
-            android:textSize="10sp" />
+            android:textSize="14sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </RelativeLayout>
