--- a/res/layout/home_taobao_webview_activity.xml
+++ b/res/layout/home_taobao_webview_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/home_banner_bg" >
 
@@ -34,45 +35,54 @@
         android:layout_height="0dp"
         android:layout_weight="1" >
 
-        <WebView
-            android:id="@+id/home_taobao_webview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbarStyle="insideOverlay" />
         <RelativeLayout
-            android:id="@id/taobao_bottom_rel"
+            android:id="@+id/home_taobao_layout_bottom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/taobao_bottom_bg" >
 
             <ImageButton
-                android:id="@id/taobao_back_but"
-                android:layout_width="40.0dip"
-                android:layout_height="40.0dip"
+                android:id="@+id/home_taobao_button_back"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="20.0dip"
+                android:layout_marginLeft="20dp"
                 android:background="@drawable/taobao_bottom_left_not"
                 android:onClick="backClick" />
 
             <ImageButton
-                android:id="@id/taobao_forward_but"
-                android:layout_width="40.0dip"
-                android:layout_height="40.0dip"
-                android:layout_marginLeft="20.0dip"
-                android:layout_toRightOf="@id/taobao_back_but"
+                android:id="@+id/home_taobao_button_forward"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/home_taobao_button_back"
                 android:background="@drawable/taobao_bottom_right_not"
                 android:onClick="forwardClick" />
 
             <ImageButton
-                android:id="@id/taobao_refresh_but"
-                android:layout_width="40.0dip"
-                android:layout_height="40.0dip"
+                android:id="@+id/home_taobao_button_refresh"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="20.0dip"
-                android:background="@drawable/taobao_bottom_refresh"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/taobao_bottom_refresh_not"
                 android:onClick="refreshClick" />
         </RelativeLayout>
+
+        <WebView
+            android:id="@+id/home_taobao_webview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/home_taobao_layout_bottom"
+            android:scrollbarStyle="insideOverlay" />
+
+        <ProgressBar
+            android:id="@+id/home_taobao_webview_pb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingBottom="40dp" />
     </RelativeLayout>
 
 </LinearLayout>
