客户端离线缓存机制修改

--- a/res/layout/home_tab_activity.xml
+++ b/res/layout/home_tab_activity.xml
@@ -92,6 +92,7 @@
             android:orientation="horizontal" >
 
             <ProgressBar
+                android:id="@+id/app_loading_progressBar_tip"
                 style="?android:attr/progressBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
