--- a/res/layout/home_tab_activity.xml
+++ b/res/layout/home_tab_activity.xml
@@ -120,7 +120,7 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:visibility="gone" >
+            android:visibility="invisible" >
 
             <ProgressBar
                 style="?android:attr/progressBarStyleSmall"
