--- a/res/layout/collect_tab_list_item.xml
+++ b/res/layout/collect_tab_list_item.xml
@@ -37,9 +37,10 @@
                 android:layout_marginLeft="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="￥25"
+                android:text="未知"
                 android:textColor="#ffffff"
-                android:textSize="10sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
@@ -53,9 +54,10 @@
                 android:layout_marginRight="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="销量：321"
+                android:text="销量:未知"
                 android:textColor="#ffffff"
-                android:textSize="10sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </RelativeLayout>
 
