--- a/res/layout/home_tab_list_item.xml
+++ b/res/layout/home_tab_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/home_tab_galleryitem_bg" >
 
     <!--
     <com.tianxia.widget.image.SmartImageView
