--- a/res/layout/home_details_activity.xml
+++ b/res/layout/home_details_activity.xml
@@ -134,9 +134,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="-3dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="0dp"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -144,6 +144,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
                 android:layout_marginTop="3dp"
                 android:background="#ff4d94"
                 android:drawableLeft="@drawable/home_details_tv_describe"
@@ -163,8 +164,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
-                android:minHeight="200dp"
-                android:scrollbarStyle="outsideOverlay" />
+                android:scrollbars="none" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -189,8 +189,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
-                android:minHeight="200px"
-                android:scrollbarStyle="outsideOverlay" />
+                android:scrollbars="none" />
         </LinearLayout>
     </ScrollView>
 
