--- a/res/layout/home_details_activity.xml
+++ b/res/layout/home_details_activity.xml
@@ -164,6 +164,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
+                android:isScrollContainer="false"
                 android:scrollbars="none" />
 
             <TextView
@@ -189,6 +190,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
+                android:isScrollContainer="false"
                 android:scrollbars="none" />
         </LinearLayout>
     </ScrollView>
