--- a/res/layout/home_details_activity.xml
+++ b/res/layout/home_details_activity.xml
@@ -182,16 +182,22 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <WebView
-                android:id="@+id/home_details_tv_evaluate"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="3dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
-                android:isScrollContainer="false"
-                android:scrollbars="none" />
+                android:minHeight="50dp" >
+
+                <WebView
+                    android:id="@+id/home_details_tv_evaluate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:isScrollContainer="false"
+                    android:scrollbars="none" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
