--- a/res/layout/setting_about_activity.xml
+++ b/res/layout/setting_about_activity.xml
@@ -45,63 +45,81 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/setting_about_copyright_1"
-            android:textColor="#000000"
-            android:textSize="14dip" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/setting_about_copyright_2"
-            android:textColor="#000000"
-            android:textSize="14dip" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/setting_about_copyright_3"
-            android:textColor="#000000"
-            android:textSize="14dip" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000" />
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:id="@+id/app_header"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/app_footer"
         android:layout_below="@id/app_banner"
-        android:layout_marginTop="12dip"
-        android:orientation="vertical" >
+        android:layout_marginTop="12dip" >
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:drawableLeft="@drawable/icon"
-            android:text="@string/setting_about_subject"
-            android:textColor="#000000"
-            android:textSize="20dip"
-            android:textStyle="italic" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dip"
-            android:text="@string/setting_about_description"
-            android:textColor="#000000"
-            android:textSize="14dip" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:drawableTop="@drawable/ic_launcher"
+                android:text="@string/app_name"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#000000"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/setting_about_version"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dip"
-            android:textColor="#000000"
-            android:textSize="14dip" />
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dip"
+                android:text="@string/setting_about_description"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#000000" />
 
+            <TextView
+                android:id="@+id/setting_about_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dip"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#000000" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dip"
+                android:autoLink="email"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="3dp"
+                android:text="商务合作请联系\nQQ:888888\nQQ群:66666\nEmail:ddd@126.com"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#000000" />
+        </LinearLayout>
+    </ScrollView>
+    <!--
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
@@ -118,5 +136,6 @@
             android:layout_height="wrap_content" >
         </WebView>
     </LinearLayout>
+    -->
 
 </RelativeLayout>
